--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,16 +49,16 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default
-EditorStartupMap=/Game/Maps/Map
+EditorStartupMap=/Game/Maps/FinalMap
+EditorStartupMap=/Game/Maps/FinalMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Engine/Maps/Entry
-GameDefaultMap=/Game/Maps/Map
-GlobalDefaultGameMode=/Script/Engine.GameMode
-GlobalDefaultGameMode=/Game/Blueprints/MyGame.MyGame_C
+GameDefaultMap=/Game/Maps/FinalMap
+GameDefaultMap=/Game/Maps/FinalMap
+GlobalDefaultGameMode=/Game/Blueprints/OurGameMode.OurGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/OurGameMode.OurGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
@@ -79,5 +79,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
