--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -25,20 +25,19 @@ bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
 -ActionMappings=(ActionName="Fire",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Fire",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Fire",Key=Gamepad_DPad_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Fire",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MoveHorizontal",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveHorizontal",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="MoveHorizontal",Key=Gamepad_LeftX,Scale=1.000000)
 -AxisMappings=(AxisName="MoveHorizontal",Key=Left,Scale=-1.000000)
--AxisMappings=(AxisName="Fire",Key=Up,Scale=1.000000)
 -AxisMappings=(AxisName="MoveHorizontal",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="MoveHorizontal",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveHorizontal",Key=D,Scale=1.000000)
